...
  const HomeScreen({
    Key? key,
    required this.firstButtonPressed,
    required this.secondButtonPressed,
    required this.onItemTapped,
    required this.selectedIndex,
  }) : super(key: const Key("HomePage"));

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: utilities.secondaryColor,
...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
            children: [
              Column(
                children: [
                  CustomBoxAvatarWithHero(
                    key: const Key("ProfilePicHome"),
                    picUrl: utilities.imageUserProfile,
                    tags: "profilePic",
                    newPage: const ProfilePage(),
                  ),
                  const SizedBox(
                    height: 10,
...
